src/test/ui/consts/const-eval/union-const-eval-field.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/union-const-eval-field.rs:28:37
   |
LL |     const FIELD3: Field3 = unsafe { UNION.field3 };
   |                                     ^^^^^^^^^^^^ type validation failed: encountered uninitialized bytes, but expected initialized bytes

error[E0080]: erroneous constant used
  --> $DIR/union-const-eval-field.rs:30:5
   |
LL |     FIELD3
   |     ^^^^^^ referenced constant has errors

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
